--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -21,10 +21,8 @@ jobs:
       with:
         node-version: '18.x'
 
-    - name: Change to portfolio-site directory
-      run: cd portfolio-site
-
-    - name: npm install, build, and test
+    - name: Change to portfolio-site directory and install dependencies
+      working-directory: ./portfolio-site
       run: |
         npm install
         npm run build --if-present
