--- a/portfolio-site/angular.json
+++ b/portfolio-site/angular.json
@@ -33,14 +33,26 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "budgets": [
+              {
+                "type": "initial",
+                "maximumWarning": "600kb",
+                "maximumError": "1mb"
+              },
+              {
+                "type": "anyComponentStyle",
+                "maximumWarning": "2kb",
+                "maximumError": "4kb"
+              }
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "600kb",
                   "maximumError": "1mb"
                 },
                 {
@@ -63,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "portfolio-site:build:production"
+              "browserTarget": "portfolio-site:build:production"
             },
             "development": {
-              "buildTarget": "portfolio-site:build:development"
+              "browserTarget": "portfolio-site:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "portfolio-site:build"
+            "browserTarget": "portfolio-site:build"
           }
         },
         "test": {
@@ -101,6 +113,6 @@
     }
   },
   "cli": {
-    "analytics": "fe54fcdc-179c-4c91-9c66-6994ec5784fc"
+    "analytics": false
   }
 }
