--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: node-app
-        path: ./portfolio-site/dist
+        path: ./portfolio-site/dist/portfolio-site
 
   deploy:
     permissions:
