Update web.config and workflow to handle Angular routing

--- a/portfolio-site/web.config
+++ b/portfolio-site/web.config
@@ -8,6 +8,7 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
           </conditions>
           <action type="Rewrite" url="/" />
         </rule>
@@ -15,8 +16,15 @@
     </rewrite>
     <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json" />
-      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
-      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
     </staticContent>
+    <security>
+      <requestFiltering>
+        <fileExtensions>
+          <remove fileExtension=".json" />
+        </fileExtensions>
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration> 
