--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         npm install
         npm run build
+        cp web.config dist/portfolio-site/
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v4
