--- a/portfolio-site/angular.json
+++ b/portfolio-site/angular.json
@@ -36,13 +36,13 @@
             "budgets": [
               {
                 "type": "initial",
-                "maximumWarning": "600kb",
-                "maximumError": "1mb"
+                "maximumWarning": "4mb",
+                "maximumError": "5mb"
               },
               {
                 "type": "anyComponentStyle",
-                "maximumWarning": "2kb",
-                "maximumError": "4kb"
+                "maximumWarning": "150kb",
+                "maximumError": "200kb"
               }
             ]
           },
